tests/ui/pattern/usefulness/match-vec-fixed.stderr
error: unreachable pattern
  --> $DIR/match-vec-fixed.rs:7:9
   |
LL |         [_, _, _] => {}
   |         --------- matches all the values already
LL |         [_, _, _] => {}
   |         ^^^^^^^^^ unreachable pattern
   |
note: the lint level is defined here
  --> $DIR/match-vec-fixed.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/match-vec-fixed.rs:11:9
   |
LL |         [_, 1, _] => {}
   |         --------- matches all the values already
LL |         [_, 1, _] => {}
   |         ^^^^^^^^^ unreachable pattern

error: aborting due to 2 previous errors

